@@ -27,8 +27,8 @@ Here's a sample session::
     No git repository found in /Users/tomster/.gitcache/.
     Initiating cloning into cache.
     Analyzing svn log...
-    Cloning https://svn.plone.org/svn/plone/plone.app.form/ from r10593:27155 into /Users/tomster/.gitcache/
-    Initialized empty Git repository in /Users/tomster/.gitcache/plone.app.form/.git/
+    Cloning https://svn.plone.org/svn/plone/plone.app.form/ from r10593:34543 into /Users/tomster/.gitcache/
+    Initialized empty Git repository in /Users/tomster/Development/gitcache/plone.app.form/.git/
     ...
     Git branch 'local/1.1' is now following svn branch '1.1':
     # On branch local/1.1
@@ -40,7 +40,6 @@ Here's a sample session::
 Points to note:
 
  * gitify limited the cloning to the revisions found in the svn log of the package root (here ``https://svn.plone.org/svn/plone/plone.app.form/``). A big time saver, especially on large repositories (such as plone.collective)
- * gitify created the git repository at ``~/.gitcache`` *not in place*
  * gitify created a local branch ``local/1.1`` that follows the (remote) svn branch ``1.1`` and switched to it
  * gitify assumed that the name of the package is the name of the directory it 
    was called from (in this case ``plone.app.form``) as it refuses to guess
@@ -65,6 +64,9 @@ What happens if we run gitify here?::
 
     > cd plone.app.form/
     > gitify
+    Updating existing cache:
+    fetching /Users/tomster/.gitcache/plone.app.form
+    Done. 1 packages updated.
     Git branch 'local/trunk' is now following svn branch 'trunk':
     # On branch local/trunk
     nothing to commit (working directory clean)
@@ -76,59 +78,13 @@ Notice, that this operation went much faster, as we now have used the existing g
     * local/trunk
       master
 
-Caveats
-=======
-
-'Recycling' ``.git`` in this manner works (perhaps surprisingly) well in practice, but you need to keep the following in mind:
-
-**All checkouts share the same index!**
-
-Let's take a look at what this means by switching back to our feature branch::
-
-    > cd ../../feature-branch/plone.app.form/
-    > git status
-    # On branch local/trunk
-    # Changed but not updated:
-    #   (use "git add/rm <file>..." to update what will be committed)
-    #   (use "git checkout -- <file>..." to discard changes in working directory)
-    #
-    #	modified:   docs/HISTORY.txt
-    ...
-    #	deleted:    plone/app/form/kss/tests/test_kss.py
-    ...
-    #
-    # Untracked files:
-    #   (use "git add <file>..." to include in what will be committed)
-    #
-    #	plone/app/form/tests/test_kss.py
-
-Wohah! What happened is that ``.git`` now points to trunk and thus the status
-command shows the difference between that and our branch as local
-modifications, since that is what the filesystem represents. We can verify
-this by using subversions status command::
-
-    > svn st
-    <BLANKLINE>
-
-Phew! All in order! But what to do with git? We've finished working on trunk
-and want to get back to our feature branch, but the git index is all wrong?!
-Simple: just re-run gitify::
-
-    > gitify
-    Git branch 'local/1.1' is now following svn branch '1.1':
-    # On branch local/1.1
-    nothing to commit (working directory clean)
-
-Basically, that's all you need to remember when working with multiple
-check-outs of the same package: **Always run gitify when switching between
-check-outs!**
 
 Keeping the cache up-to-date
 ============================
 
 Of course, once you introduce a cache you need to keep it up-to-date. ``git-svn``
 provides the ``fetch`` command for this purpose. In practice it is cumbersome
-to update each package manually, though. Therefore we provide the ``fetch``
+to update each package manually, though. Therefore we provide our own ``fetch``
 command which can update multiple packages at once using wildcards, like so::
 
     > gitify fetch plone*
@@ -138,8 +94,12 @@ command which can update multiple packages at once using wildcards, like so::
     Done. 3 packages updated.
 
 You can pass the ``-v`` option to see the output of the ``git-svn fetch`` commands.
-If you don't provide a package *all* packages will be updated. This is useful
-for automated updates, i.e. from crontab.
+If you don't provide a package *all* packages will be updated. 
+
+Note, that the our fetch command never touches any working copy, only the cache. 
+Is primarily intended to be run as a maintenance command, i.e. via crontab to keep
+the local cache 'fresh'.
+
 
 Keeping git and svn in sync
 ===========================
