@@ -27,3 +27,6 @@ class TestDoctests(BaseTestCase):
     def test_gitify_up(self):
         self._test_doctest()
 
+    def test_gitify_fetch(self):
+        self._test_doctest()
+
